--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Hello there</title>
 		<link rel="stylesheet" type="text/css" href="/main.css">
 	</head>
 	<body>
