--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hello there</title>
+		<title>Jacob Thomas, Systems Specialist</title>
 		<link rel="stylesheet" type="text/css" href="/main.css">
 	</head>
 	<body>
@@ -15,14 +15,14 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Jacob</h1>
+				<p>Hi <em>Hey</em> hello <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:jacbthomas@gmail.com">email</a></li>
+        		<li><a href="https://github.com/jcbthomas">github.com/jcbthomas</a></li>
 			</ul>
 		</footer>
 	</body>
